packages/build/tests/error/monitor/fixtures/ipc/plugin.js
module.exports = {
  onInit() {
    process.exit()
  },
  onBuild() {},
}
